design/bootstrap/less/base.less
@import url(//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&subset=latin,latin-ext);
@import url(//fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800&subset=latin,latin-ext);
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900&subset=latin-ext');

@font-face {
  font-family: 'Reckless Regular';
  src: url('../../fonts/Reckless.otf') format('opentype');
}

html, body {
  overflow-x: hidden;
  max-width: 100%
}

body {
  padding-top: 70px;
  background-image: url("../../images/textura.png");
  font-weight: @font-weight;
}

.fancy {
  font-family: 'Reckless Regular', 'Comic Sans MS', sans-serif;
}

#main_menu .glyphicon {
  margin-left:.5em;
}

.nav-menu.in {
  position: fixed;
  z-index: 1050;
  top: 56px;
  bottom: 0;
  overflow-y: auto;
  border-radius: 0;
  background-color: @body-bg;
}

.navbar-main {
  z-index: 1050;

  border-bottom: 3px solid @body-bg;
  outline: 2px solid @brand-primary;
}

.navbar-main .navbar-toggle:focus{
  background-color: transparent;
}

.navbar-main .navbar-toggle.active {
  background-color: darken(@brand-primary, 10%);
}

li > h1 {
  margin-top: 0;
}

h2.logo
{
  margin-top: 0;
}

h2.logo img
{
  max-width:80%;
}

#trojsten_logo
{
  img {
    height: 1.5em;
    vertical-align: baseline;
  }
  color: #5f7de4;
}

.ksp_login_provider_list img {
  width: auto;
  height: 1em;
}

#account_links > li {
  display:list-item;
}

.simplemodal-container {
  color: black;
}

.table-rounds {
  margin-top: 1em;
  border: 1px solid @table-border-color;
}

.table-rounds td {
  vertical-align: middle !important;
}

.well.task-points.pull-right {
  margin-left: 5px;
}

label.required:after {
  content: "*";
}

.social-button {
  padding: 16px 0;
  height: 50px;
  margin-right: 10px;
}

.label-button {
  border: 1px solid rgba(0, 0, 0, .3);
}

.main-content {
  text-align: justify;
  background-color: @main-bg;
  padding-left: 5%;
  padding-right: 5%;
  padding-bottom: 3em;
  margin-bottom: 3em;
  -webkit-box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.5);
  -moz-box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.5);
  box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.5);
  border: 2px solid @brand-primary;
  outline: 5px solid @main-bg;
}

.main-content p {
  line-height: 1.5;
}

.main-content #article-container,
.main-content .news-entry {
  padding-bottom: 3em;
  margin-bottom: 1em;
  // border-bottom: 1px dotted darken(@brand-primary, 13%);
}

.main-content .news-entry > .news-entry-details {
  color: #777;
  font-size: .9em;
  margin-top: -1em;
}

.main-content .news-entry > .news-entry-text {
  margin-top: 1em;
}

.main-content .wiki-article table th {
  font-size: 1.3em;
}

.main-content .wiki-article table td {
  padding: 0.5em 2em 0 0;
}

.page-header {
  // border-bottom: 1px dotted darken(@brand-primary, 13%);
}

.sidebar {
  text-align: right;
}

.sidebar a:link,
.sidebar a:visited,
footer a:link,
footer a:visited {
  color: @link-color-sidebar;
}

.sidebar li a:hover {
  background-color: @gray-dark;
}

.sidebar h2 {
  font-size: 1.5em;
  padding: 10px 25px 0 0;
  color: @text-color-sidebar;
}

.sidebar .nav>li>a {
  padding-left: 15px;
}

/* Login Button */
#login-box {
  margin-right:-30px;
}

#login-dropdown {
  border: 1px solid darken(@brand-primary, 20%);
  background-color: darken(@brand-primary, 10%);
  -webkit-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.4);
  -moz-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.4);
  box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.4);
}

#login-dropdown:hover {
  background-color: darken(@brand-primary, 20%);
}

/* Results table */
.result-task, .result-sum, .result-prev{
  text-align: center;
  width:4ex;
}

.result-rank {
  width: 7ex;
}

.result-task-integer {
  width: 2ex;
}

.result-year {
  text-align: center;
  width: 1ex;
}

.tab-pane > .roundprogressbar {
  margin-top: 1em;
}

/* task statements */
.btn-statements {
  min-width: 20%;
}

.task-list td {
  vertical-align: middle !important;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 84px;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 84px;
  background-color: darken(@body-bg, 7%);
}

footer .container {
  padding-top: 20px;
}

footer ul {
  margin-bottom: 6px;
}

.glyphicon-animate-rotate {
    -animation: spin .7s infinite linear;
    -webkit-animation: spin2 .7s infinite linear;
}

@-webkit-keyframes spin2 {
    from { -webkit-transform: rotate(0deg);}
    to { -webkit-transform: rotate(360deg);}
}

@keyframes spin {
    from { transform: scale(1) rotate(0deg);}
    to { transform: scale(1) rotate(360deg);}
}

/* Statements markdown specific
-------------------------------------------------- */

.task-table th, .task-table td {
    border: 1px solid darken(@brand-primary, 20%);
    border-collapse: collapse;
    padding: 2px 5px;
}

